# course_homework

3. Algorithms and data structures/1. Introduction to algorithmic complexity. Binpoisk/: 1 задание.md  2.cpp
3. Algorithms and data structures/3. Sorting/: 1.cpp
3. Algorithms and data structures/4. Dynamic Array Lists Decks/: 1.cpp  2.cpp  3.cpp
3. Algorithms and data structures/5. Pyramids and search trees/: 1.cpp  2.cpp
4. base programming/10. CMake/2/: CMakeLists.txt
4. base programming/10. CMake/my_first_cmake_project/: CMakeLists.txt  my_first_cmake_program.cpp
4. base programming/11. Building and connecting libraries/5/: CMakeLists.txt  Figure.h  Triangle.h  equilateralTriangle.h
4. base programming/11. Building and connecting libraries/CMakeDemo/: CMakeLists.txt  Header.h
4. base programming/11. Building and connecting libraries/dynamicLibrary/: Header.h  Source.cpp  (+1 more)
4. base programming/5. OOP research and polymorphism/: 2.cpp  3.cpp
4. base programming/7. Preprocessor and Macros/: 1.cpp
4. base programming/8. Exceptions and error handling/: 1.cpp
4. base programming/9. Operator overloading/: 1.cpp  2.cpp
5. Advanced programming in c ++/1. Innovations in C++/: 1.cpp  2.cpp  3.cpp
5. Advanced programming in c ++/2. Under the hood compilation and linking/: 1.cpp  2.cpp
5. Advanced programming in c ++/3. The life cycle of the object. RAII/: 1.cpp  2.cpp
6. Working with databases/2. Working with PostgreSQL. Creating a database/: music.sql
6. Working with databases/4. Advanced data sampling/: create.sql  insert.sql  select.sql
(+21 files in other folders)
