cmake_minimum_required(VERSION 3.10)

project(more)

add_executable(demo 3.cpp equilateralTriangle.cpp isoscelesTriangle.cpp parallelogram.cpp qadrilateral.cpp rhombus.cpp rightTriangle.cpp square.cpp Triangle.cpp equilateralTriangle.h Figure.h isoscelesTriangle.h parallelogram.h qadrilateral.h rhombus.h rightTriangle.h square.h Triangle.h)